--- a/http_service/templates/index.html
+++ b/http_service/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,5 +7,37 @@
 </head>
 <body>
     <h1>Hi</h1>
+</body>
+</html> {% endcomment %}
+{% comment %} <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Текстовые поля в HTML5</title>
+    </head>
+    <body>
+        <form>
+            <p><input type="text" name="userName" placeholder="Введите имя" size="18" /></p>
+            <p><input type="text" name="userPhone" placeholder="Введите номер телефона" size="18" maxlength="11" /></p>
+            <p>
+                <button type="submit">Отправить</button> 
+                <button type="reset">Отмена</button>
+            </p>
+        </form>
+    </body>
+</html> {% endcomment %}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>HTTP_service</title>
+</head>
+<body>
+    <h2>Форма запроса</h2>
+    <form method="post" action="postuser/">
+        {% csrf_token %}
+        <p>Запрос:<br> <input name="resp" /></p>
+        <input type="submit" value="Send" />
+    </form>
 </body>
 </html>
